@@ -1,3 +1,11 @@
+2002-08-03  Mike Kestner <mkestner@speakeasy.net>
+
+	* generator/Method.cs : Added IsGetter, IsSetter, ReturnType. Made
+	  GenerateImport, GenerateBody public.
+	* generator/Parameters.cs : Added Parameter::MarshalType
+	* generator/Property.cs : Added logic to use methods instead of text
+	  properties wherever possible.
+	
 2002-08-03  Rachel Hestilow  <hestilow@ximian.com>
 
 	* generator/Method.cs: Support libname overrides. Call parms.Finish.
